--- a/Capstone Two/Diabetic Patient Readmission - Data Wrangling.ipynb
+++ b/Capstone Two/Diabetic Patient Readmission - Data Wrangling.ipynb
@@ -766,7 +766,7 @@
    "id": "f035e899",
    "metadata": {},
    "source": [
-    "'diag_1', 'diag_2', and 'diag_3' are correspond to ICD-9-CM codes for patients' primary, secondary, and additional secondary diagnoses, respectively. This reference can be found here: https://www.cms.gov/Medicare/Coding/ICD9ProviderDiagnosticCodes/codes\n",
+    "'diag_1', 'diag_2', and 'diag_3' are correspond to ICD-9-CM (Version 32) codes for patients' primary, secondary, and additional secondary diagnoses, respectively. This reference can be found here: https://www.cms.gov/Medicare/Coding/ICD9ProviderDiagnosticCodes/codes\n",
     "\n",
     "**Generated a .html report which can be used to explore df1 in greater detail using pandas-profiler and the following code:**<br>\n",
     "import pandas_profiling<br>\n",
@@ -872,6 +872,27 @@
   },
   {
    "cell_type": "markdown",
+   "id": "765014f3",
+   "metadata": {},
+   "source": [
+    "Observations made in the df1.html profile:<br>\n",
+    "- 'time_in_hospital' distribution is right-tailed, with a range of 1-14 (days) and a mean of 4.40.\n",
+    "- 'payer_code' contains 39.6% '?'s. This will be monitored through the project to avoid errors.\n",
+    "- 'medical_specialty' contains 49.1% '?'s.\n",
+    "- 'num_lab_procedures' has a fairly normal distribution, though 1 procedure is the most frequent at 3.2% frequency with 43 procedures at 2.8% as the second most-frequent. The distribution has a mean of 43.10 and a range of 1-132.\n",
+    "- 'num_procedures' distribution is right-tailed, with a 'bump' at the max value of 6.\n",
+    "- 'num_medications' distribution is right-tailed, with a range of 1-81 and mean of 16.02.\n",
+    "- 'diag_' columns contain a high number of ICD-9 codes starting with 428, 276, 427, 250, and 401.\n",
+    "- 'number_diagnoses' is particularly interesting, with 48.6% of values at 9, a range of 1-16, and a mean of 7.42.\n",
+    "- 'A1Cresult' is 83.3% 'None', meaning the vast majority of these encounters do not include the taking of an A1c test.\n",
+    "- 'examide' and 'citoglipton' medications were unchanged across the dataset and will therefore be dropped in our 'clean' dataset.\n",
+    "- 'insulin' contains 46.6% 'No', indicating ~47% of the encounters do not involve patients who are actively taking insulin.\n",
+    "- 'change' column contains 53.8% 'No', so a slight majority of these encounters involve patients whose diabetes medication is unchanged (dosage or generic name) afterwards.\n",
+    "- 'diabetesMed' column shows 77.0% of encounters involve a diabetes medication prescription."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "746848ec",
    "metadata": {},
    "source": [
@@ -922,6 +943,36 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c611b4ae",
+   "metadata": {},
+   "source": [
+    "Dropping constants 'examide' and 'citoglipton':"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "9832407b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(101766, 48)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1 = df1.drop(columns=['examide','citoglipton'])\n",
+    "df1.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "4fb88087",
    "metadata": {},
    "source": [
@@ -932,6 +983,375 @@
     "The data is in a good enough state to move forward and handle further data cleaning as deemed necessary by the requirements of the modeling stage.<br>\n",
     "<br>\n",
     "The provided link to feature descriptions also shows calculated missingness percentages."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "bb816c75",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>encounter_id</th>\n",
+       "      <th>patient_nbr</th>\n",
+       "      <th>race</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>age</th>\n",
+       "      <th>weight</th>\n",
+       "      <th>admission_type_id</th>\n",
+       "      <th>discharge_disposition_id</th>\n",
+       "      <th>admission_source_id</th>\n",
+       "      <th>time_in_hospital</th>\n",
+       "      <th>...</th>\n",
+       "      <th>tolazamide</th>\n",
+       "      <th>insulin</th>\n",
+       "      <th>glyburide-metformin</th>\n",
+       "      <th>glipizide-metformin</th>\n",
+       "      <th>glimepiride-pioglitazone</th>\n",
+       "      <th>metformin-rosiglitazone</th>\n",
+       "      <th>metformin-pioglitazone</th>\n",
+       "      <th>change</th>\n",
+       "      <th>diabetesMed</th>\n",
+       "      <th>readmitted</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2278392</td>\n",
+       "      <td>8222157</td>\n",
+       "      <td>Caucasian</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>[0-10)</td>\n",
+       "      <td>?</td>\n",
+       "      <td>6</td>\n",
+       "      <td>25</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>NO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>149190</td>\n",
+       "      <td>55629189</td>\n",
+       "      <td>Caucasian</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>[10-20)</td>\n",
+       "      <td>?</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7</td>\n",
+       "      <td>3</td>\n",
+       "      <td>...</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Up</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Ch</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>&gt;30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>64410</td>\n",
+       "      <td>86047875</td>\n",
+       "      <td>AfricanAmerican</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>[20-30)</td>\n",
+       "      <td>?</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>NO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>500364</td>\n",
+       "      <td>82442376</td>\n",
+       "      <td>Caucasian</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>[30-40)</td>\n",
+       "      <td>?</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Up</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Ch</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>NO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>16680</td>\n",
+       "      <td>42519267</td>\n",
+       "      <td>Caucasian</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>[40-50)</td>\n",
+       "      <td>?</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Steady</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Ch</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>NO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>35754</td>\n",
+       "      <td>82637451</td>\n",
+       "      <td>Caucasian</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>[50-60)</td>\n",
+       "      <td>?</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>...</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Steady</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>&gt;30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>55842</td>\n",
+       "      <td>84259809</td>\n",
+       "      <td>Caucasian</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>[60-70)</td>\n",
+       "      <td>?</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>...</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Steady</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Ch</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>NO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>63768</td>\n",
+       "      <td>114882984</td>\n",
+       "      <td>Caucasian</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>[70-80)</td>\n",
+       "      <td>?</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7</td>\n",
+       "      <td>5</td>\n",
+       "      <td>...</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>&gt;30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>12522</td>\n",
+       "      <td>48330783</td>\n",
+       "      <td>Caucasian</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>[80-90)</td>\n",
+       "      <td>?</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>13</td>\n",
+       "      <td>...</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Steady</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Ch</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>NO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>15738</td>\n",
+       "      <td>63555939</td>\n",
+       "      <td>Caucasian</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>[90-100)</td>\n",
+       "      <td>?</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>12</td>\n",
+       "      <td>...</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Steady</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Ch</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>NO</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>10 rows × 48 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   encounter_id  patient_nbr             race  gender       age weight  \\\n",
+       "0       2278392      8222157        Caucasian  Female    [0-10)      ?   \n",
+       "1        149190     55629189        Caucasian  Female   [10-20)      ?   \n",
+       "2         64410     86047875  AfricanAmerican  Female   [20-30)      ?   \n",
+       "3        500364     82442376        Caucasian    Male   [30-40)      ?   \n",
+       "4         16680     42519267        Caucasian    Male   [40-50)      ?   \n",
+       "5         35754     82637451        Caucasian    Male   [50-60)      ?   \n",
+       "6         55842     84259809        Caucasian    Male   [60-70)      ?   \n",
+       "7         63768    114882984        Caucasian    Male   [70-80)      ?   \n",
+       "8         12522     48330783        Caucasian  Female   [80-90)      ?   \n",
+       "9         15738     63555939        Caucasian  Female  [90-100)      ?   \n",
+       "\n",
+       "   admission_type_id  discharge_disposition_id  admission_source_id  \\\n",
+       "0                  6                        25                    1   \n",
+       "1                  1                         1                    7   \n",
+       "2                  1                         1                    7   \n",
+       "3                  1                         1                    7   \n",
+       "4                  1                         1                    7   \n",
+       "5                  2                         1                    2   \n",
+       "6                  3                         1                    2   \n",
+       "7                  1                         1                    7   \n",
+       "8                  2                         1                    4   \n",
+       "9                  3                         3                    4   \n",
+       "\n",
+       "   time_in_hospital  ... tolazamide insulin  glyburide-metformin  \\\n",
+       "0                 1  ...         No      No                   No   \n",
+       "1                 3  ...         No      Up                   No   \n",
+       "2                 2  ...         No      No                   No   \n",
+       "3                 2  ...         No      Up                   No   \n",
+       "4                 1  ...         No  Steady                   No   \n",
+       "5                 3  ...         No  Steady                   No   \n",
+       "6                 4  ...         No  Steady                   No   \n",
+       "7                 5  ...         No      No                   No   \n",
+       "8                13  ...         No  Steady                   No   \n",
+       "9                12  ...         No  Steady                   No   \n",
+       "\n",
+       "   glipizide-metformin  glimepiride-pioglitazone  metformin-rosiglitazone  \\\n",
+       "0                   No                        No                       No   \n",
+       "1                   No                        No                       No   \n",
+       "2                   No                        No                       No   \n",
+       "3                   No                        No                       No   \n",
+       "4                   No                        No                       No   \n",
+       "5                   No                        No                       No   \n",
+       "6                   No                        No                       No   \n",
+       "7                   No                        No                       No   \n",
+       "8                   No                        No                       No   \n",
+       "9                   No                        No                       No   \n",
+       "\n",
+       "   metformin-pioglitazone  change diabetesMed readmitted  \n",
+       "0                      No      No          No         NO  \n",
+       "1                      No      Ch         Yes        >30  \n",
+       "2                      No      No         Yes         NO  \n",
+       "3                      No      Ch         Yes         NO  \n",
+       "4                      No      Ch         Yes         NO  \n",
+       "5                      No      No         Yes        >30  \n",
+       "6                      No      Ch         Yes         NO  \n",
+       "7                      No      No         Yes        >30  \n",
+       "8                      No      Ch         Yes         NO  \n",
+       "9                      No      Ch         Yes         NO  \n",
+       "\n",
+       "[10 rows x 48 columns]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1.head(10)"
    ]
   }
  ],
