--- a/Capstone Two/Diabetic Patient Readmission - Data Wrangling.ipynb
+++ b/Capstone Two/Diabetic Patient Readmission - Data Wrangling.ipynb
@@ -995,38 +995,63 @@
    "execution_count": 19,
    "id": "212b4d19",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0         Pediatrics-Endocrinology\n",
-       "1                          missing\n",
-       "2                          missing\n",
-       "3                          missing\n",
-       "4                          missing\n",
-       "                    ...           \n",
-       "101761                     missing\n",
-       "101762                     missing\n",
-       "101763                     missing\n",
-       "101764             Surgery-General\n",
-       "101765                     missing\n",
-       "Name: medical_specialty, Length: 101766, dtype: object"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df1.medical_specialty.str.replace('?','missing')"
+    "df1.medical_specialty = df1.medical_specialty.replace('?','missing')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "bb816c75",
+   "id": "1fa2328a",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Other    90409\n",
+       "<30      11357\n",
+       "Name: readmitted, dtype: int64"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1.readmitted = df1.readmitted.replace(['NO', '>30'], 'Other')\n",
+    "df1.readmitted.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "74423059",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df1.iloc[:,20:] = df1.iloc[:,20:].replace('No', 0)\n",
+    "df1.iloc[:,20:] = df1.iloc[:,20:].replace(['Yes','Ch','Up'], 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "0d9f139e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df1.loc[:,'diag_1':'diag_3'] = df1.loc[:,'diag_1':'diag_3'].replace('?','missing')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "bb816c75",
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -1086,16 +1111,16 @@
        "      <td>1</td>\n",
        "      <td>Pediatrics-Endocrinology</td>\n",
        "      <td>...</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>NO</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Other</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1108,18 +1133,18 @@
        "      <td>1</td>\n",
        "      <td>7</td>\n",
        "      <td>3</td>\n",
-       "      <td>?</td>\n",
+       "      <td>missing</td>\n",
        "      <td>...</td>\n",
-       "      <td>No</td>\n",
-       "      <td>Up</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>Ch</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>&gt;30</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Other</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1132,18 +1157,18 @@
        "      <td>1</td>\n",
        "      <td>7</td>\n",
        "      <td>2</td>\n",
-       "      <td>?</td>\n",
+       "      <td>missing</td>\n",
        "      <td>...</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>NO</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Other</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1156,18 +1181,18 @@
        "      <td>1</td>\n",
        "      <td>7</td>\n",
        "      <td>2</td>\n",
-       "      <td>?</td>\n",
+       "      <td>missing</td>\n",
        "      <td>...</td>\n",
-       "      <td>No</td>\n",
-       "      <td>Up</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>Ch</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>NO</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Other</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1180,18 +1205,18 @@
        "      <td>1</td>\n",
        "      <td>7</td>\n",
        "      <td>1</td>\n",
-       "      <td>?</td>\n",
+       "      <td>missing</td>\n",
        "      <td>...</td>\n",
-       "      <td>No</td>\n",
+       "      <td>0</td>\n",
        "      <td>Steady</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>Ch</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>NO</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Other</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -1204,18 +1229,18 @@
        "      <td>1</td>\n",
        "      <td>2</td>\n",
        "      <td>3</td>\n",
-       "      <td>?</td>\n",
+       "      <td>missing</td>\n",
        "      <td>...</td>\n",
-       "      <td>No</td>\n",
+       "      <td>0</td>\n",
        "      <td>Steady</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>&gt;30</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Other</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -1228,18 +1253,18 @@
        "      <td>1</td>\n",
        "      <td>2</td>\n",
        "      <td>4</td>\n",
-       "      <td>?</td>\n",
+       "      <td>missing</td>\n",
        "      <td>...</td>\n",
-       "      <td>No</td>\n",
+       "      <td>0</td>\n",
        "      <td>Steady</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>Ch</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>NO</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Other</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -1252,18 +1277,18 @@
        "      <td>1</td>\n",
        "      <td>7</td>\n",
        "      <td>5</td>\n",
-       "      <td>?</td>\n",
+       "      <td>missing</td>\n",
        "      <td>...</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>&gt;30</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Other</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
@@ -1276,18 +1301,18 @@
        "      <td>1</td>\n",
        "      <td>4</td>\n",
        "      <td>13</td>\n",
-       "      <td>?</td>\n",
+       "      <td>missing</td>\n",
        "      <td>...</td>\n",
-       "      <td>No</td>\n",
+       "      <td>0</td>\n",
        "      <td>Steady</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>Ch</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>NO</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Other</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
@@ -1302,16 +1327,16 @@
        "      <td>12</td>\n",
        "      <td>InternalMedicine</td>\n",
        "      <td>...</td>\n",
-       "      <td>No</td>\n",
+       "      <td>0</td>\n",
        "      <td>Steady</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>Ch</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>NO</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Other</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1344,57 +1369,57 @@
        "9                  3                         3                    4   \n",
        "\n",
        "   time_in_hospital         medical_specialty  ...  tolazamide  insulin  \\\n",
-       "0                 1  Pediatrics-Endocrinology  ...          No       No   \n",
-       "1                 3                         ?  ...          No       Up   \n",
-       "2                 2                         ?  ...          No       No   \n",
-       "3                 2                         ?  ...          No       Up   \n",
-       "4                 1                         ?  ...          No   Steady   \n",
-       "5                 3                         ?  ...          No   Steady   \n",
-       "6                 4                         ?  ...          No   Steady   \n",
-       "7                 5                         ?  ...          No       No   \n",
-       "8                13                         ?  ...          No   Steady   \n",
-       "9                12          InternalMedicine  ...          No   Steady   \n",
+       "0                 1  Pediatrics-Endocrinology  ...           0        0   \n",
+       "1                 3                   missing  ...           0        1   \n",
+       "2                 2                   missing  ...           0        0   \n",
+       "3                 2                   missing  ...           0        1   \n",
+       "4                 1                   missing  ...           0   Steady   \n",
+       "5                 3                   missing  ...           0   Steady   \n",
+       "6                 4                   missing  ...           0   Steady   \n",
+       "7                 5                   missing  ...           0        0   \n",
+       "8                13                   missing  ...           0   Steady   \n",
+       "9                12          InternalMedicine  ...           0   Steady   \n",
        "\n",
        "   glyburide-metformin  glipizide-metformin  glimepiride-pioglitazone  \\\n",
-       "0                   No                   No                        No   \n",
-       "1                   No                   No                        No   \n",
-       "2                   No                   No                        No   \n",
-       "3                   No                   No                        No   \n",
-       "4                   No                   No                        No   \n",
-       "5                   No                   No                        No   \n",
-       "6                   No                   No                        No   \n",
-       "7                   No                   No                        No   \n",
-       "8                   No                   No                        No   \n",
-       "9                   No                   No                        No   \n",
+       "0                    0                    0                         0   \n",
+       "1                    0                    0                         0   \n",
+       "2                    0                    0                         0   \n",
+       "3                    0                    0                         0   \n",
+       "4                    0                    0                         0   \n",
+       "5                    0                    0                         0   \n",
+       "6                    0                    0                         0   \n",
+       "7                    0                    0                         0   \n",
+       "8                    0                    0                         0   \n",
+       "9                    0                    0                         0   \n",
        "\n",
        "   metformin-rosiglitazone metformin-pioglitazone change diabetesMed  \\\n",
-       "0                       No                     No     No          No   \n",
-       "1                       No                     No     Ch         Yes   \n",
-       "2                       No                     No     No         Yes   \n",
-       "3                       No                     No     Ch         Yes   \n",
-       "4                       No                     No     Ch         Yes   \n",
-       "5                       No                     No     No         Yes   \n",
-       "6                       No                     No     Ch         Yes   \n",
-       "7                       No                     No     No         Yes   \n",
-       "8                       No                     No     Ch         Yes   \n",
-       "9                       No                     No     Ch         Yes   \n",
+       "0                        0                      0      0           0   \n",
+       "1                        0                      0      1           1   \n",
+       "2                        0                      0      0           1   \n",
+       "3                        0                      0      1           1   \n",
+       "4                        0                      0      1           1   \n",
+       "5                        0                      0      0           1   \n",
+       "6                        0                      0      1           1   \n",
+       "7                        0                      0      0           1   \n",
+       "8                        0                      0      1           1   \n",
+       "9                        0                      0      1           1   \n",
        "\n",
        "   readmitted  \n",
-       "0          NO  \n",
-       "1         >30  \n",
-       "2          NO  \n",
-       "3          NO  \n",
-       "4          NO  \n",
-       "5         >30  \n",
-       "6          NO  \n",
-       "7         >30  \n",
-       "8          NO  \n",
-       "9          NO  \n",
+       "0       Other  \n",
+       "1       Other  \n",
+       "2       Other  \n",
+       "3       Other  \n",
+       "4       Other  \n",
+       "5       Other  \n",
+       "6       Other  \n",
+       "7       Other  \n",
+       "8       Other  \n",
+       "9       Other  \n",
        "\n",
        "[10 rows x 46 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1405,7 +1430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "id": "7b95c4de",
    "metadata": {},
    "outputs": [],
@@ -1430,7 +1455,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
